Set max-width to avoid overlapping on larger images
See https://github.com/hbz/lobid/issues/437

--- a/gatsby/lobid/static/stylesheets/lobid.css
+++ b/gatsby/lobid/static/stylesheets/lobid.css
@@ -67,6 +67,7 @@ h5 {
 #index-image {
 	float: right;
 	max-height: 200px;
+	max-width: 100%
 }
 
 .json-ld-icon {
